--- a/templates/index.html
+++ b/templates/index.html
@@ -1,109 +1,126 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dog Breed Recognizer</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Dog Breed Classifier (Udacity Artificial Intelligence Nanodegree)">
+    <meta name="author" content="Thomas Tartière">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <title>Dog Breed Classifier</title>
+
+    <!-- Bootstrap core CSS -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    
 
+    <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
 
-</head>
+  </head>
 
-<body>
-       
-    <h1>Upload a new File</h1>
+  <body>
 
-    <div class="container">
-        <div class="col-md-6">
+    <!-- Begin page content -->
+    <main role="main" class="container">
+      <h1 class="mt-5">Dog Breed Classifier</h1>
+      <p class="lead">Use Transfer Learning to identify a dog breed!</p>
+      <p>Please upload a photo of a dog or human.</p>
 
-            <form action="/" method="post" enctype="multipart/form-data" >
+      <form action="/" method="post" enctype="multipart/form-data" >
 
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    <ul class=flashes>
-                    {% for category, message in messages %}
-                        {% if category=='error' %}
-                        <div class="alert alert-danger" role="alert">
-                            {{ message }}
-                        </div>
-                        {% else %}
-                        <div class="alert alert-info" role="alert">
-                            {{ message }}
-                        </div>
-                        {% endif %}
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-            {% endwith %}
-
-            {% if description %}
-                <div class="alert alert-success" role="alert">
-                        {{description}}
-                </div>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class=flashes>
+                {% for category, message in messages %}
+                    {% if category=='error' %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
+                    {% else %}
+                    <div class="alert alert-info" role="alert">
+                        {{ message }}
+                    </div>
+                    {% endif %}
+                {% endfor %}
+                </ul>
             {% endif %}
+        {% endwith %}
 
-            <div class="form-group">
-                <label>Upload Image</label>
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <span class="btn btn-default btn-file">
-                            Browse… <input type="file" name="file" id="imgInp">
-                        </span>
-                    </span>
-                    <input type="text" class="form-control" readonly>
-                </div>
-                <img id='img-upload'/>
+        {% if description %}
+            <div class="alert alert-success" role="alert">
+                    {{description}}
             </div>
+        {% endif %}
 
-            <input type="submit" value="Analyze" class="btn btn-primary">
-            </form>
+        <div class="form-group">
+            <div class="input-group">
+                <span class="input-group-btn">
+                    <span class="btn btn-default btn-file">
+                        Browse… <input type="file" name="file" id="imgInp">
+                    </span>
+                </span>
+                <input type="text" class="form-control" readonly>
+            </div>
+            <img id='img-upload'/>
         </div>
-    </div>
-   
+
+        <input type="submit" value="Analyze" class="btn btn-primary">
+    </form>            
+    
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Built by <a href="https://github.com/tartieret">Thomas Tartière</a>.</span>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script type="text/javascript">
 
-    $(document).ready( function() {
+        $(document).ready( function() {
+    
+            /* Display the name of the selected file in the select box */
+            $(document).on('change', '.btn-file :file', function() {
+                var input = $(this),
+                    label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
+                input.trigger('fileselect', [label]);
+            });
+    
+            $('.btn-file :file').on('fileselect', function(event, label) {
+                
+                var input = $(this).parents('.input-group').find(':text'),
+                    log = label;
+                
+                if( input.length ) {
+                    input.val(log);
+                } else {
+                    if( log ) alert(log);
+                }
+            
+            });
+            function readURL(input) {
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+                    
+                    reader.onload = function (e) {
+                        $('#img-upload').attr('src', e.target.result);
+                    }
+                    
+                    reader.readAsDataURL(input.files[0]);
+                }
+            }
+    
+            $("#imgInp").change(function(){
+                readURL(this);
+            }); 	
+        });
+    
+    </script>    
 
-        /* Display the name of the selected file in the select box */
-    	$(document).on('change', '.btn-file :file', function() {
-            var input = $(this),
-                label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
-            input.trigger('fileselect', [label]);
-		});
-
-		$('.btn-file :file').on('fileselect', function(event, label) {
-		    
-		    var input = $(this).parents('.input-group').find(':text'),
-		        log = label;
-		    
-		    if( input.length ) {
-		        input.val(log);
-		    } else {
-		        if( log ) alert(log);
-		    }
-	    
-		});
-		function readURL(input) {
-		    if (input.files && input.files[0]) {
-		        var reader = new FileReader();
-		        
-		        reader.onload = function (e) {
-		            $('#img-upload').attr('src', e.target.result);
-		        }
-		        
-		        reader.readAsDataURL(input.files[0]);
-		    }
-		}
-
-		$("#imgInp").change(function(){
-		    readURL(this);
-		}); 	
-	});
-
-    </script>
 </body>
 </html>
+
